# bedrock-expriementation

./: README.md  pyproject.toml  starter.py
src/: genaimodels.py  starter.py
