[tool.poetry]
name = "bedrock-expriementation"
version = "0.1.0"
description = "bedrock expriements"
authors = ["Shailendra Jain <shailendrajain28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.103"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
